--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </label>
                     <input type="checkbox" name="age-confirm" id="checkbox" />
                 </p>
-                <button typle="submit">
+                <button type="submit">
                     Get running!
                 </button>
             </form>
