--- a/index.html
+++ b/index.html
@@ -78,25 +78,25 @@
             <h2 class="section-title secondary-border">What You Do</h2>
             <div>
                 <!-- insert this img element -->
-                <img src="./assets/images/step-1.svg" alt="" />
+                <img src="./assets/images/assets/images/step-1.svg" alt="" />
                 <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
                 <p>Are you here here to build muscle, lose weight, or just feel good</p>
             </div>
 
             <div>
-                <img src="./assets/images/step-2.svg" alt="" />
+                <img src="./assets/images/assets/images/step-2.svg" alt="" />
                 <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
                 <p>Are you here to build muscle, lose weight, or just feel good?</p>
             </div>
 
             <div>
-                <img src="./assets/images/step-3.svg" alt="" />
+                <img src="./assets/images/assets/images/step-3.svg" alt="" />
                 <h3>Step 3: <span>Get Running.</span></h3>
                 <p>Hit the ground running (literally) once your trainer lays out your plan. </p>
             </div>
 
             <div>
-                <img src="./assets/images/step-4.svg" alt="" />
+                <img src="./assets/images/assets/images/step-4.svg" alt="" />
                 <h3>Step 4: <span>See Results.</span></h3>
                 <p>Bi-weekly checkins with your trainer will keep you focused</p>
             </div>
