--- a/index.html
+++ b/index.html
@@ -147,6 +147,30 @@
         <!-- "reach out" -->
         <section>
             <h2>Reach Out</h2>
+            <div class="contact-info">
+                <iframe src=<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3146.010771195042!2d-120.42504984873379!3d37.953534479627955!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8090c46e315aaf1b%3A0xb32d2fcd2023b726!2sMain%20St%2C%20Jamestown%2C%20CA%2095327!5e0!3m2!1sen!2sus!4v1637188076866!5m2!1sen!2sus" 
+                width="400" 
+                height="400" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy">
+            </iframe>
+            </div>
+            <div>
+                <h3>Run Buddy</h3>
+                <p>
+                    Any questions or concerns before sigining up?
+                    <br />
+                    Lety us know and we'll be happy to talk to you!
+                </p>
+                <address>
+                    55 Main Street <br/>
+                    Some Town, Ca <br/>
+                    12345<br />
+                    P: 555.RUN.BUDZ (555.786.2839)<br/>
+                    E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                </address>
+            </div>
         </section>
         
         <!-- footer -->
