--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     </address>
                 
             <div class="contact-form">
-                <h3>Contact us</h3>
+                <h3>Contact Us</h3>
                 <form>
                     <label for="contact-name">Your Name</label>
                     <input type="text" id="contact-name" placeholder="Your Name" />
